log
Thu 20 Apr 2023 04:59:06 PM UTC: 
 tests:  1|8
total_score: 0/70
21c4a6f
Thu 20 Apr 2023 05:04:09 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
beadcdd
Thu 20 Apr 2023 05:08:47 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|6
total_score: 15/70
303de57
Thu 20 Apr 2023 05:16:12 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
d521539
Thu 20 Apr 2023 05:19:11 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
6170b56
Thu 20 Apr 2023 05:34:41 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
e83b5c9
Thu 20 Apr 2023 05:35:17 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|6
total_score: 15/70
a241ec6
Thu 20 Apr 2023 05:36:38 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
09c0594
Fri 21 Apr 2023 06:38:36 PM UTC: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  11|6
total_score: 15/70
649537e
Fri 21 Apr 2023 06:39:34 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|6
total_score: 15/70
1da2f55
Fri 21 Apr 2023 06:42:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ce5250a
Fri 21 Apr 2023 06:42:41 PM UTC: 
 treemap.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
bdc9d23
Fri 21 Apr 2023 06:42:59 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
6c62096
Fri 21 Apr 2023 06:46:59 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
1c4769f
Fri 21 Apr 2023 06:50:05 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|6
total_score: 15/70
58fc1d0
Fri 21 Apr 2023 06:50:49 PM UTC: 
 treemap.c | 58 ++++++++++++++++++++++++++++------------------------------
 1 file changed, 28 insertions(+), 30 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:67:21: error: implicit declaration of function ‘createPair’ [-Werror=implicit-function-declaration]
   67 |     Pair* newPair = createPair(key, value);
      |                     ^~~~~~~~~~
treemap.c:67:21: error: initialization of ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:68:25: error: too few arguments to function ‘createTreeNode’
   68 |     TreeNode* newNode = createTreeNode(newPair);
      |                         ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
   29 | TreeNode * createTreeNode(void* key, void * value) {
      |            ^~~~~~~~~~~~~~
treemap.c:78:9: error: ‘TreeMap’ has no member named ‘size’
   78 |     tree->size++;
      |         ^~
cc1: all warnings being treated as errors
Compilation failed
ed6b36a
Fri 21 Apr 2023 06:50:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:67:21: error: implicit declaration of function ‘createPair’ [-Werror=implicit-function-declaration]
   67 |     Pair* newPair = createPair(key, value);
      |                     ^~~~~~~~~~
treemap.c:67:21: error: initialization of ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:68:25: error: too few arguments to function ‘createTreeNode’
   68 |     TreeNode* newNode = createTreeNode(newPair);
      |                         ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
   29 | TreeNode * createTreeNode(void* key, void * value) {
      |            ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7cc46a7
Fri 21 Apr 2023 06:52:24 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
14cae7c
Fri 21 Apr 2023 06:57:46 PM UTC: 
 treemap.c | 63 ++++++++++++++++++++++++++++++++++++++++++---------------------
 1 file changed, 42 insertions(+), 21 deletions(-)
 tests:  13|5
total_score: 25/70
660483e
Fri 21 Apr 2023 07:00:16 PM UTC: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  13|5
total_score: 25/70
72763a8
Fri 21 Apr 2023 07:05:06 PM UTC: 
 treemap.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  13|5
total_score: 25/70
7207788
Fri 21 Apr 2023 07:12:15 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
3c81fcf
